--- a/SootP1/.classpath
+++ b/SootP1/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Ashish/Downloads/jasminclasses.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ashish/Downloads/polyglotclasses-1.3.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ashish/Downloads/sootclasses-2.5.0.jar"/>
+	<classpathentry kind="lib" path="D:/ExternalJars/jasminclasses.jar"/>
+	<classpathentry kind="lib" path="D:/ExternalJars/polyglotclasses-1.3.5.jar"/>
+	<classpathentry kind="lib" path="D:/ExternalJars/sootclasses-2.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
